--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,15 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -63,7 +63,7 @@ code {
 
 .slider:before {
   position: absolute;
-  content: '';
+  content: "";
   height: 26px;
   width: 26px;
   left: 4px;
@@ -105,45 +105,39 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-
 .customSlider {
-  /* max width of your slider */
-  max-width: 300px;
-  /* Optional: Only If you want to center your slider in the page */
-  margin: auto;
-}
-.customSlider-thumb {
-  cursor: pointer;
-  /*color for the thumb */
-  background: var(--main-color);
-  /* shape of the thumb: circle */
-  width: 20px;
-  height: 20px;
-  border-radius: 100%;
-  /* remove default outline when selected */
-  outline: none;
-}
-
-.customSlider-thumb:hover {
-  box-shadow: 0 0 0 8px var(--main-color-hover);
+  position: relative;
+  height: 25px;
+  margin: 15px 0;
 }
 
 .customSlider-track {
-  /* Top value to align your track to the center of your thumb */
-  top: 8px;
-  /* thickness of the track */
-  height: 4px;
-  /* default color of your track */
-  background: var(--track-color);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #ddd;
+  height: 5px;
 }
 
 .customSlider-track.customSlider-track-0 {
-  /* color of the track before the thumb */
-  background: var(--main-color);
+  background: #ddd;
 }
 
-:root {
-  --main-color: rgb(104, 117, 217);
-  --main-color-hover: rgb(104, 117, 217, 0.2);
-  --track-color: #ddd;
+.customSlider-track.customSlider-track-1 {
+  background: #b90bd0; /* Color for the highlighted selected range */
+}
+
+.customSlider-thumb {
+  height: 20px;
+  width: 20px;
+  background-color: #b90bd0;
+  border-radius: 50%;
+  cursor: grab;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.customSlider-thumb:active {
+  cursor: grabbing;
 }
