--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ input:focus + .slider {
   box-shadow: 0 0 1px #2196f3;
 }
 
+#map {
+  height: 180px;
+}
+
 .toggle-text {
   font-size: 16px;
   color: #333;
