WainwrightLogging + Custom hooks
WainwrightInfo page added, which is reached via the Wainwright markers.

Params passed into the URL for this page are then used to fetch the Wainwright info from the API and load the object required.

UseWainwright, UseRoute custom hooks added to simplfy data fetching and refactor components needed data.

Data for sliders on map pages now use min/max data from the database in the Stats.js file.

--- a/src/index.css
+++ b/src/index.css
@@ -128,13 +128,13 @@ input:checked + .slider:before {
 }
 
 .customSlider-track.customSlider-track-1 {
-  background: #b90bd0; /* Color for the highlighted selected range */
+  background: #23c25d; /* Color for the highlighted selected range */
 }
 
 .customSlider-thumb {
   height: 20px;
   width: 20px;
-  background-color: #b90bd0;
+  background-color: #23c25d;
   border-radius: 50%;
   cursor: grab;
   position: absolute;
